# mastodon-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: entities.rs  lib.rs  mastodon.rs
